SONAR-4898 improve default settings